adding config & menu scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,17 +1,12 @@
-$primary-color: #CDECBA;
-$scondary-color: #98AFC9;
-$show-home-image: true;
-$home-image: url();
-
-@mixin easeOut {
-    ransition: all 0.5s ease-out;
-}
+@import 'config';
+@import 'menu';
 
 * {
     box-sizing: border-box;
 }
 
 body{
+    @include background;
     background: $primary-color;
     color: #fff;
     height: 100%;
@@ -33,7 +28,7 @@ h1, h2, h3{
     &.sm-heading{
         margin-bottom: 2rem;
         padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color, 2), 0.5);
+        background: rgba(lighten($primary-color, 2), 0);
     }
 }
 
